src/test/resources/good/custom/003-large-int.lat
int main() {
    printInt(1234567890123);
    return 0;
}
