src/test/resources/bad/provided/036-large-int-literal.lat
int main () {
    return 10000000000000000000000;
}
